# semantic-diff-ir

./: .gitignore  DEMO.md  HP_PROJECT_REPORT.md  Makefile  README.md  __init__.py  cli.py  pipeline.py  pyproject.toml
classify/: __init__.py  base.py  control_flow.py  memory.py  optimizations.py
compiler/: __init__.py  extractor.py  normalizer.py
diff/: __init__.py  engine.py  matcher.py
eval/: __init__.py  benchmark.py  cli.py  evaluator.py  real_commit_eval.py  real_commits_sample.yaml
examples/real_commits/: README.md  case1_new.c  case1_new.ll  case1_old.c  case1_old.ll  case2_new.c  case2_new.ll  case2_old.c  case2_old.ll  case3_new.c  case3_new.ll  case3_old.c  case3_old.ll  case4_new.c  case4_new.ll  case4_old.c  case4_old.ll  case5_new.c  case5_new.ll  case5_old.c  case5_old.ll  case6_new.c  case6_new.ll  case6_old.c  case6_old.ll  case7_new.c  case7_new.ll  case7_old.c  case7_old.ll  run_demo.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
graphs/: __init__.py  cfg.py  dfg.py
parser/: __init__.py  parser.py  types.py
report/: __init__.py  dot_renderer.py  renderer.py
tests/: test_benchmark.py  test_classifier.py  test_diff.py  test_improvements.py  test_normalizer.py  test_parser.py
tests/fixtures/: new.c  old.c
web/: __init__.py  api.py
